--- a/src/modules/components/rating/_rating.html
+++ b/src/modules/components/rating/_rating.html
@@ -1,12 +1,12 @@
 <div class="rating">
     <input type="radio" id="star1" name="rating" value="1" class="rating__input">
-    <label for="star1" class="rating__star"></label>
+    <label for="star1" class="rating__star icon icon--icon-star"></label>
     <input type="radio" id="star2" name="rating" value="2" class="rating__input">
-    <label for="star2" class="rating__star"></label>
+    <label for="star2" class="rating__star icon icon--icon-star"></label>
     <input type="radio" id="star3" name="rating" value="3" class="rating__input">
-    <label for="star3" class="rating__star"></label>
+    <label for="star3" class="rating__star icon icon--icon-star"></label>
     <input type="radio" id="star4" name="rating" value="4" class="rating__input">
-    <label for="star4" class="rating__star"></label>
+    <label for="star4" class="rating__star icon icon--icon-star"></label>
     <input type="radio" id="star5" name="rating" value="5" class="rating__input">
-    <label for="star5" class="rating__star"></label>
+    <label for="star5" class="rating__star icon icon--icon-star"></label>
 </div>
