--- a/src/scss/_icons.scss
+++ b/src/scss/_icons.scss
@@ -199,4 +199,11 @@
         }
     }
     
+    &--icon-star {
+        &::before {
+            mask-image: url('../assets/icons/sprite.svg#icon-star');
+        }
+    }
+
+
 }
