--- a/src/modules/components/cards/promo-card/_promo-card.scss
+++ b/src/modules/components/cards/promo-card/_promo-card.scss
@@ -1,7 +1,7 @@
 .promo-card {
     display: flex;
     flex-direction: column;
-    max-height: 400px;
+    max-height: 400px !important;
     height: 100% !important;
 
     &__text {
@@ -10,8 +10,4 @@
         font-size: 24px;
     }
 
-}
-
-.promo-item {
-    flex-shrink: 1;
 }
