--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -51,3 +51,4 @@
 
 @import '../modules/pages/product/product-gallery/product-gallery';
 @import '../modules/pages/product/product-info/product-info';
+@import '../modules/pages/product/product-catalog/product-catalog';
