--- a/src/modules/components/checkbox/_checkbox.html
+++ b/src/modules/components/checkbox/_checkbox.html
@@ -1,26 +1,8 @@
 <div class="checkbox">
 
-    <input type="checkbox" id="discountCheckbox" class="checkbox__input">
-    <label for="discountCheckbox" class="checkbox__label icon icon--check">
-        Зі знижкою
-    </label>
-
-</div>
-
-<div class="checkbox">
-
-    <input type="checkbox" id="newCheckbox" class="checkbox__input">
-    <label for="newCheckbox" class="checkbox__label icon icon--check">
-        Новинка
-    </label>
-
-</div>
-
-<div class="checkbox">
-
-    <input type="checkbox" id="seasonHitCheckbox" class="checkbox__input">
-    <label for="seasonHitCheckbox" class="checkbox__label icon icon--check">
-        Хіт сезону
+    <input type="checkbox" id="@checkboxId" class="checkbox__input">
+    <label for="@checkboxId" class="checkbox__label">
+        @checkboxName
     </label>
 
 </div>
