--- a/src/modules/components/dropdown/_dropdown.html
+++ b/src/modules/components/dropdown/_dropdown.html
@@ -1,36 +1,25 @@
 <div class="dropdown">
 
-    <label for="dropdown1" class="dropdown__text icon icon--chevron-down">За ціною</label>
-    <input type="checkbox" id="dropdown1" class="dropdown__toggle">
+    <label for="@dropdownId" class="dropdown__text icon icon--chevron-down">
+        @dropdownTitle
+    </label>
+    <input type="checkbox" id="@dropdownId" class="dropdown__toggle">
 
     <ul class="dropdown__content">
         <li class="dropdown__item">
-            <button class="dropdown__btn" href="#">За ціною</button>
+            <button class="dropdown__btn" href="#">
+                За ціною
+            </button>
         </li>
         <li class="dropdown__item">
-            <button class="dropdown__btn" href="#">За назвою</button>
+            <button class="dropdown__btn" href="#">
+                За назвою
+            </button>
         </li>
         <li class="dropdown__item">
-            <button class="dropdown__btn" href="#">За розміром</button>
-        </li>
-    </ul>
-
-</div>
-
-<div class="dropdown">
-
-    <label for="dropdown2" class="dropdown__text icon icon--chevron-down">По 12</label>
-    <input type="checkbox" id="dropdown2" class="dropdown__toggle">
-
-    <ul class="dropdown__content">
-        <li class="dropdown__item">
-            <button class="dropdown__btn" href="#">По 12</button>
-        </li>
-        <li class="dropdown__item">
-            <button class="dropdown__btn" href="#">По 8</button>
-        </li>
-        <li class="dropdown__item">
-            <button class="dropdown__btn" href="#">По 4</button>
+            <button class="dropdown__btn" href="#">
+                За розміром
+            </button>
         </li>
     </ul>
 
