--- a/src/modules/components/mobile-menu/_mobile-menu.html
+++ b/src/modules/components/mobile-menu/_mobile-menu.html
@@ -20,11 +20,11 @@
 
         <ul class="menu__list mobile-menu__list">
             <li class="menu__item mobile-menu__item">
-                <a class="menu__link menu__link--active mobile-menu__link" href="#header">Головна</a>
+                <a class="menu__link menu__link--active mobile-menu__link" href="./index.html">Головна</a>
             </li>
 
             <li class="menu__item  mobile-menu__item">
-                <a class="menu__link mobile-menu__link" href="#categories">Страви</a>
+                <a class="menu__link mobile-menu__link" href="./catalog.html">Страви</a>
             </li>
 
             <li class="menu__item  mobile-menu__item">
