--- a/src/modules/components/slider-price/_slider-price.scss
+++ b/src/modules/components/slider-price/_slider-price.scss
@@ -1,7 +1,12 @@
 .price-slider {
     width: 100%;
     height: 2px;
-    background-color: red !important;
+    background-color: $gray !important;
+}
+
+.noUi-target {
+    border: none;
+    height: 2px;
 }
 
 .price-slider .noUi-connect {
