--- a/src/modules/pages/catalog/catalog-promo/_catalog-promo.scss
+++ b/src/modules/pages/catalog/catalog-promo/_catalog-promo.scss
@@ -1,22 +1,27 @@
 .promo {
     &__title {
         text-align: left;
+
         @include r($r-md) {
             margin-bottom: 30px;
         }
     }
 
-    &__inner {
-        display: flex;
-    }
-
     &__list {
         display: flex;
         gap: 30px;
+
+        @include r($r-md) {
+            gap: 0;
+        }
     }
 
     &__item {
         display: flex;
         width: fit-content;
     }
+}
+
+.promo__item {
+    justify-content: center;
 }
