--- a/src/modules/components/breadcrumbs/_breadcrumbs.scss
+++ b/src/modules/components/breadcrumbs/_breadcrumbs.scss
@@ -1,15 +1,23 @@
 .breadcrumbs {
-    background-color: rgba($orange-900, 0.10);
+    display: flex;
+    padding: 24px 0;
     margin-bottom: 60px;
+    position: relative;
 
-    &__inner {
-        display: flex;
-        padding: 24px 0;
+    &::before {
+        content: '';
+        background-color: rgba($orange-900, 0.10);
+        position: absolute;
+        width: 100vw;
+        height: 100%;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%); 
     }
 
     &__list {
         display: flex;
-        justify-content: flex-start;
+        align-items: center;
         gap: 5px;
     }
 
@@ -20,12 +28,6 @@
         font-size: 14px;
         letter-spacing: 0.42px;
         line-height: 1.2;
-
-        &::before {
-            min-width: 6px !important;
-            height: 10px;
-            background-color: $gray;
-        }
     }
 
 }
