--- a/src/modules/components/cards/promo-card/_promo-card.scss
+++ b/src/modules/components/cards/promo-card/_promo-card.scss
@@ -1,10 +1,9 @@
 .promo-card {
     display: flex;
     flex-direction: column;
-    max-height: 400px !important;
-    height: 100% !important;
 
     &__text {
+        height: 75px;
         @include line-clamp(2);
         padding: 0 20px 15px 20px;
         font-size: 24px;
