--- a/src/modules/components/swiperjs/_swiperjs.scss
+++ b/src/modules/components/swiperjs/_swiperjs.scss
@@ -40,11 +40,6 @@
             height: 18px;
             background-color: $gray;
         }
-
-
-        &--next {}
-
-        &--prev {}
     }
 
     &__dots {
@@ -79,14 +74,6 @@
             background-color: rgba($orange-900, 0.5);
         }
     }
-}
-
-.restaurant-slider {
-    overflow: visible;
-}
-
-.promo-slider {
-    overflow: visible;
 }
 
 .review-slider {
@@ -124,6 +111,7 @@
         bottom: 50%;
         z-index: 999;
         border: none;
+        padding: 10px 15px;
         &::before {
             width: 18px;
             height: 30px;
