--- a/src/modules/pages/catalog/_catalog.scss
+++ b/src/modules/pages/catalog/_catalog.scss
@@ -87,6 +87,16 @@
         }
     }
 
+    &__btn-close {
+        display: none;
+
+        @include r($r-sm) {
+            display: flex;
+            width: fit-content;
+            margin-left: auto;
+        }
+    }
+
     &__sidebar {
         display: flex;
         flex-direction: column;
@@ -94,7 +104,18 @@
         gap: 30px;
 
         @include r($r-sm) {
-            display: none;
+            transform: translateX(-200%);
+            position: absolute;
+            top: 0;
+            left: 0;
+            z-index: 9;
+            padding: 20px 20px 20px 0;
+            background-color: $white;
+            transition: transform 0.7s;
+        }
+
+        &--active {
+            transform: translateX(0);
         }
     }
 
@@ -108,14 +129,18 @@
         @include r($r-md) {
             margin-bottom: 30px;
             grid-template-columns: repeat(3, minmax(0, 1fr));
-            grid-template-rows: repeat(3, minmax(0, 1fr));
-            grid-auto-rows: repeat(3, minmax(0, 1fr));
+
+            & li:nth-last-child(-n+3) {
+                display: none;
+            }
         }
 
         @include r($r-xs) {
             grid-template-columns: repeat(2, minmax(0, 1fr));
-            grid-template-rows: repeat(2, minmax(0, 1fr));
-            grid-auto-rows: repeat(2, minmax(0, 1fr));
+
+            & li:nth-last-child(-n+6) {
+                display: none;
+            }
         }
 
     }
