--- a/src/modules/components/breadcrumbs/_breadcrumbs.scss
+++ b/src/modules/components/breadcrumbs/_breadcrumbs.scss
@@ -12,7 +12,8 @@
         height: 100%;
         top: 50%;
         left: 50%;
-        transform: translate(-50%, -50%); 
+        transform: translate(-50%, -50%);
+        z-index: -1;
     }
 
     &__list {
@@ -28,6 +29,13 @@
         font-size: 14px;
         letter-spacing: 0.42px;
         line-height: 1.2;
+        @extend .link;
+
+        &::before {
+            width: 6px;
+            height: 10px;
+            background-color: $gray;
+        }
     }
 
 }
