--- a/src/modules/components/dropdown/_dropdown.scss
+++ b/src/modules/components/dropdown/_dropdown.scss
@@ -1,75 +1,83 @@
 .dropdown {
+    width: fit-content;
     position: relative;
-    display: flex;
-    gap: 20px;
+    margin: 1rem;
+    font-size: 14px;
 
-    &__text {
+    &__select {
+        background-color: $white;
         display: flex;
+        justify-content: space-between;
         align-items: center;
         flex-direction: row-reverse;
-        gap: 10px;
-        padding: 15px;
-        border: 1px solid $gray;
-        border-radius: 4px;
+        gap: 15px;
+        border: 2px $gray solid;
         cursor: pointer;
-        user-select: none;
-        transition: border-color 0.5s, background-color 0.5s, color 0.5s;
+        padding: 1rem;
+        transition: background-color 0.5s, border-color 0.5s, color 0.5s;
 
-        &::before {
-            width: 6px;
-            height: 10px;
-            background-color: $gray;
-        }
-
-        &:hover {
+        &--clicked {
+            border-color: $gray;
 
             &::before {
-                background-color: $orange-900;
+                transition: transform 0.5s ease-in-out;
+                transform: rotate(180deg);
             }
         }
 
         &:hover {
             border-color: $orange-900;
             color: $orange-900;
+            transition: background-color 0.5s;
+
+            &::before {
+                background-color: $orange-900;
+            }
         }
 
         &:focus {
             border-color: $orange-900;
         }
-
     }
 
-    &__toggle {
-        display: none;
-    }
-
-    &__toggle:checked~.dropdown__content {
-        display: block;
-    }
-
-    &__content {
+    &__menu {
+        padding: 0.2rem 0.5rem;
         position: absolute;
-        top: calc(100% + 5px);
-        left: 0;
-        z-index: 10;
-        display: none;
-        min-width: 100px;
-        margin-top: 5px;
-        border: 1px solid $gray;
-        border-radius: 4px;
+        border: 2px $gray solid;
         background-color: $white;
+        top: 4rem;
+        left: 50%;
+        width: 100%;
+        transform: translateX(-50%);
+        opacity: 0;
+        display: none;
+        transition: 0.5s;
+        z-index: 1;
 
-        & .dropdown__btn {
-            display: block;
-            width: 100%;
-            padding: 15px;
-            color: $darkBlue-900;
-            text-decoration: none;
-            transition: background-color 0.4s, outline 0.4s;
+        &--open {
+            display: flex;
+            flex-direction: column;
+            gap: 1rem;
+            opacity: 1;
+        }
+    }
 
-            &:hover {
-                outline: 1px solid $orange-900;
-            }
+    &__item {
+        cursor: pointer;
+        width: 100%;
+        outline: 1px solid transparent;
+        transition: text-shadow 0.5s, color 0.5s, outline-color 0.5s;
+
+        &--active {
+            text-shadow: 2px 2px 5px rgba(54, 56, 83, 0.50);
+        }
+
+        &:hover {
+            color: $orange-900;
+        }
+
+        &:focus {
+            outline-color: $orange-900;
         }
     }
 }
