--- a/src/modules/pages/product/product-gallery/_product-gallery.scss
+++ b/src/modules/pages/product/product-gallery/_product-gallery.scss
@@ -2,6 +2,11 @@
     display: flex;
     gap: 30px;
 
+    @include r($r-md) {
+        flex-direction: column;
+        align-items: center;
+    }
+
     &__wrapper {
         display: flex;
         align-items: center;
