--- a/src/modules/pages/product/product-info/_product-info.scss
+++ b/src/modules/pages/product/product-info/_product-info.scss
@@ -20,11 +20,28 @@
         font-size: 24px;
         line-height: 1.5;
         margin-bottom: 30px;
+        width: 100%;
+        overflow-x: auto;
+
+        @include r($r-md) {
+            justify-content: center;
+        }
+
+        @include r($r-sm) {
+            justify-content: flex-start;
+        }
     }
+
     &__details-text {
         display: flex;
         flex-direction: column;
         gap: 15px;
+    }
+
+    &__link {
+        &--active {
+            color: $orange-900;
+        }
     }
 
     &__inner {
