--- a/src/modules/components/breadcrumbs/_breadcrumbs.scss
+++ b/src/modules/components/breadcrumbs/_breadcrumbs.scss
@@ -36,6 +36,10 @@
             height: 10px;
             background-color: $gray;
         }
+
+        &--current {
+            color: $orange-900;
+        }
     }
 
 }
