--- a/src/modules/components/dropdown/_dropdown.html
+++ b/src/modules/components/dropdown/_dropdown.html
@@ -8,7 +8,7 @@
 
     </div>
 
-    <ul class="dropdown__menu dropdown__menu--open">
+    <ul class="dropdown__menu">
 
         <li class="dropdown__item @activeClass1">
             @value1
@@ -19,6 +19,7 @@
         <li class="dropdown__item @activeClass3">
             @value3
         </li>
+
     </ul>
 
 </div>
